- PR#6938: fix regression on "%047.27{l,L,n}{d,i,x,X,o,u}"
  (Benoît Vaugon, report by Arduino Cascella)
- PR#6944: let module X = Path in … is not typed as a module alias
  (Jacques Garrigue, report by def)
- PR#6982: unexpected type error when packing a module alias
- PR#6985: `module type of struct include Bar end exposes
           %s#row when Bar contains private row types
- GPR#205: Clear caml_backtrace_last_exn before registering as root (report
  and fix by Frederic Bour)
- GPR#220: minor -dsource error on recursive modules
  (Hongbo Zhang)
- GPR#228: fix a dangling internal pointer in (bytecode )debug_info
  (Gabriel Scherer and Mark Shinwell and Xavier Leroy)
- GPR#233: Make CamlinternalMod.init_mod robust to optimization
  (Pierre Chambart, Mark Shinwell)

Features wishes:
- PR#4714: List.cons
- PR#5418 (comments) : generate dependencies with $(CC) instead of gcc
- PR#6167: OCAMLPARAM support for disabling PIC generation ("pic=0")
  (Gabor Pali)
- PR#6367: introduce Asttypes.arg_label to encode labelled arguments
- PR#6452, GPR#140: add internal suport for custom printing formats
  (Jérémie Dimino)
- PR#6611: remove the option wrapper on optional arguments in the syntax tree
- PR#6635: support M.[], M.(), M.{< >} and M.[| |]
  (Jeremy Yallop, review by Gabriel Radanne)
- PR#6691: install .cmt[i] files for stdlib and compiler-libs
  (David Sheets, request by Gabriel Radanne)
- PR#6722: compatibility with x32 architecture (x86-64 in ILP32 mode).
  ocamlopt is not supported, but bytecode compiles cleanly.
- PR#6742: remove duplicate virtual_flag information from Tstr_class
- PR#6719: improve Buffer.add_channel when not enough input is available
  (Simon Cruanes)
* PR#6816: reject integer and float literals followed by alphanum
  (Hugo Heuzard)
- PR#6876: improve warning 6 by listing the omitted labels.
  (Eyyüb Sari)
- PR#6924: tiny optim to avoid some spilling of floats in x87
  (Alain Frisch)