@@ -1,0 +1,13 @@
+
+#   Characters 100-130:
+  let f : ('a list, 'a) eqp -> unit = function N s -> print_string s;;
+                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Warning 8: this pattern-matching is not exhaustive.
+Here is an example of a value that is not matched:
+Y
+type (_, _) eqp = Y : ('a, 'a) eqp | N : string -> ('a, 'b) eqp
+val f : ('a list, 'a) eqp -> unit = <fun>
+#               module rec A : sig type t = B.t list end
+and B : sig type t val eq : (B.t list, t) eqp end
+#   Exception: Match_failure ("//toplevel//", 2, 36).
+# 
